--- a/hefesto-j2ee8/src/main/webapp/private/admin/admPage/editAdmPage.xhtml
+++ b/hefesto-j2ee8/src/main/webapp/private/admin/admPage/editAdmPage.xhtml
@@ -6,62 +6,62 @@
 	xmlns:c="http://java.sun.com/jsp/jstl/core"
 	xmlns:p="http://primefaces.org/ui" template="/layout/layout.xhtml">
 
-	<ui:define name="tituloPagina"> - Administrar Página</ui:define>
+	<ui:define name="tituloPagina"> - Manage Page</ui:define>
 
 	<ui:define name="conteudo-maior">
-		<h:form id="editarAdmPagina">
-			<fieldset id="fieldsetEditarAdmPagina">
-				<div class="panel panel-default">
-					<div class="panel-heading" 
+		<h:form id="editAdmPage">
+			<fieldset id="fieldsetEditAdmPage">
+				<div class="card">
+					<div class="card-header" 
 						style="font-weight: bold;font-size: large;">
-						Administrar Página
+						Manage Page
 					</div>
-					<div class="panel-body">
+					<div class="card-body">
 					
 						<div class="form-actions">
-							<p:commandButton value="Salvar" ajax="false" icon="ui-icon-circle-check"
-								action="#{admPageMB.salvar()}" id="btnSalvar"
+							<p:commandButton value="Save" ajax="false" icon="ui-icon-circle-check"
+								action="#{admPageMB.save()}" id="btnSave"
 								styleClass="btn btn-success disableSubmit"
-								title="Salvar a admPage" />
+								title="Save a admPage" />
 
-							<p:commandButton value="Limpar" icon="ui-icon-star" id="btnLimpar"
+							<p:commandButton value="Clean" icon="ui-icon-star" id="btnClean"
 								styleClass="btn btn-primary disableSubmit" type="reset"
-								title="Limpar Campos" />
+								title="Clean Fields" />
 
-							<p:commandButton value="Cancelar" immediate="true" ajax="false" 
+							<p:commandButton value="Cancel" immediate="true" ajax="false" 
 							    icon="ui-icon-circle-close"
-								action="#{admPageMB.cancelarEdicao()}" id="btnCancelar"
+								action="#{admPageMB.cancelEdition()}" id="btnCancel"
 								styleClass="btn  btn-primary disableSubmit"
-								title="Cancelar" />
+								title="Cancel" />
 						</div>
 
 						<div class="row">
 							<div class="col-md-8 form-group">
-								<p:outputLabel for="pagina" value="Página" />
-								<p:inputText id="pagina" label="Página" required="true"
+								<p:outputLabel for="page" value="Page" />
+								<p:inputText id="page" label="Page" required="true"
 									value="#{admPageMB.bean.url}" maxlength="255">
 								</p:inputText>
 							</div>
 						</div>
 						<div class="row">
 							<div class="col-md-8 form-group">
-								<p:outputLabel for="descricao" value="Descrição:" />
-								<p:inputText id="descricao" label="Descrição" required="true"
-									value="#{admPageMB.bean.descricao}" maxlength="255">
+								<p:outputLabel for="description" value="Description:" />
+								<p:inputText id="description" label="Description" required="true"
+									value="#{admPageMB.bean.description}" maxlength="255">
 								</p:inputText>
 							</div>
 						</div>						
 						<div class="row">
 							<div class="col-md-5">
-								<p:outputLabel for="pickListPerfil" value="Perfil(s) da Página:" />
-								<p:pickList id="pickListPerfil" responsive="true"
-									value="#{admPageMB.dualListAdmPerfil}"
-									converter="admPerfilConverter" var="item"
-									itemLabel="#{item.descricao}" itemValue="#{item}"
+								<p:outputLabel for="pickListProfile" value="Page Profile(s):" />
+								<p:pickList id="pickListProfile" responsive="true"
+									value="#{admPageMB.dualListAdmProfile}"
+									converter="admProfileConverter" var="item"
+									itemLabel="#{item.description}" itemValue="#{item}"
 									showSourceFilter="true" showTargetFilter="true"
 									filterMatchMode="contains" styleClass="picklistMaior">
-									<f:facet name="sourceCaption">Disponíveis</f:facet>
-									<f:facet name="targetCaption">Autorizados</f:facet>
+									<f:facet name="sourceCaption">Available</f:facet>
+									<f:facet name="targetCaption">Authorized</f:facet>
 								</p:pickList>
 							</div>
 						</div>
