--- a/hefesto-j2ee8/src/main/webapp/sessionExpired.xhtml
+++ b/hefesto-j2ee8/src/main/webapp/sessionExpired.xhtml
@@ -11,10 +11,9 @@
 	<ui:define name="conteudo-maior">
 		<div class="row-fluid">
 			<div class="jumbotron">
-				<h2>Sessão expirada por inatividade.</h2>
+				<h2>Session expired due to inactivity.</h2>
 				<a class="btn btn-primary btn-large"
-					href="#{request.contextPath}/login.xhtml">Retornar
-					para tela de login</a>
+					href="#{request.contextPath}/login.xhtml">Return to login screen</a>
 			</div>
 		</div>
 	</ui:define>
@@ -28,10 +27,9 @@
 			<div class="span2"></div>
 			<div class="span8" style="text-align: center;">
 				<div class="hero-unit">
-					<h1>Sessão expirada por inatividade.</h1>
+					<h1>Session expired due to inactivity.</h1>
 					<a class="btn btn-primary btn-large"
-						href="/imovel/login.xhtml">Retornar para
-						tela de login</a>
+						href="/hefesto-j2ee8/login.xhtml">Return to login screen</a>
 				</div>
 			</div>
 		</div>
