--- a/hefesto-j2ee8/src/main/webapp/private/admin/admProfile/listAdmProfile.xhtml
+++ b/hefesto-j2ee8/src/main/webapp/private/admin/admProfile/listAdmProfile.xhtml
@@ -9,12 +9,12 @@
 	<ui:define name="conteudo-maior">
 		<h:form id="listAdmProfile">
 			<fieldset id="fieldsetListAdmProfile">
-				<div class="card">
-					<div class="card-header" 
+				<div class="panel panel-default">
+					<div class="panel-heading" 
 						style="font-weight: bold;font-size: large;">
 						Manage Profile
 					</div>
-					<div class="card-body">
+					<div class="panel-body">
 						<div class="row">				
 							<div class="col-md-3 form-group">		
 								<p:outputLabel for="cmbTypeReport" value="Choose the type of report:" />																
