--- a/hefesto-j2ee8/src/main/webapp/private/admin/admUser/editAdmUser.xhtml
+++ b/hefesto-j2ee8/src/main/webapp/private/admin/admUser/editAdmUser.xhtml
@@ -11,12 +11,12 @@
 	<ui:define name="conteudo-maior">
 		<h:form id="editAdmUser">
 			<fieldset id="fieldsetEditAdmUser">
-				<div class="card">
-					<div class="card-header" 
+				<div class="panel panel-default">
+					<div class="panel-heading" 
 						style="font-weight: bold;font-size: large;">
 						Manage User
 					</div>
-					<div class="card-body">
+					<div class="panel-body">
 					
 						<div class="form-actions">
 							<p:commandButton value="Save" ajax="false" icon="ui-icon-circle-check"
