--- a/hefesto-jakartaee/src/main/webapp/private/admin/admParameter/listAdmParameter.xhtml
+++ b/hefesto-jakartaee/src/main/webapp/private/admin/admParameter/listAdmParameter.xhtml
@@ -34,32 +34,30 @@
 
 			<div class="ui-g">
 			    <div class="ui-g-12 ui-md-12 ui-lg-12" style="text-align: right;">
-					<p:commandButton value="Export" title="Export" onclick="form.target='_blank'" 
-						styleClass="btn btn-primary" id="btnExport"
-						icon="pi pi-print" action="#{admParameterRelMB.export()}"
+   					<p:commandButton value="Export" title="Export" onclick="form.target='_blank'"
+   					 	icon="pi pi-upload" styleClass="ui-button-help p-mr-2 p-mb-2"
+   						id="btnExport" action="#{admParameterRelMB.export()}"
 						ajax="false" />
-
-					<p:spacer width="10" height="10" />			
 				
 					<p:commandButton id="btnInsert" value="Insert"
-						styleClass="btn btn-success" icon="pi pi-plus-circle"
+					 	icon="pi pi-plus" styleClass="ui-button-success p-mr-2"						
 						action="#{admParameterMB.onInsert()}"
-						title="Insert a new admParameter" />
+						title="Insert a new parameter" />
 
 					<p:commandButton id="btnEdit" value="Edit" ajax="false"
-						styleClass="btn btn-warning" icon="pi pi-chevron-circle-up"
+						icon="pi pi-pencil" styleClass="ui-button-warning p-mr-2"
 						action="#{admParameterMB.onEdit(admParameterMB.bean)}"
-						title="Edit item de menu" />
+						title="Edit parameter" />
 
 					<p:commandButton id="btnDelete" value="Delete"
-						styleClass="btn btn-danger" icon="pi pi-minus-circle"
+						icon="pi pi-trash" styleClass="ui-button-danger p-mr-2"
 						action="#{admParameterMB.prepareToDelete(admParameterMB.bean)}"
-						title="Edit item de menu" update="@form" />
+						title="Delete parameter" update="@form" />
 				
-					<p:commandButton value="Return" immediate="true" ajax="false" 
-						icon="pi pi-arrow-circle-left"
-						action="#{admParameterMB.cancel()}" id="btnReturn"
-						styleClass="btn btn-primary" title="Return" />    
+					<p:commandButton value="Return" immediate="true" ajax="false"
+						icon="pi pi-times" styleClass="ui-button-secondary" 
+						id="btnReturn" action="#{admParameterMB.cancel()}"
+						title="Return" />   
 			    </div>
 			</div>
 
@@ -77,11 +75,11 @@
 
 			<p:dataTable var="item" rowKey="#{item.id}" id="table" reflow="true"
 				selection="#{admParameterMB.bean}" selectionMode="single"
-				value="#{admParameterMB.listBean}" rows="#{applicationConfig.dtLines}" 
+				value="#{admParameterMB.listBean}" rows="10" paginator="true"  
 				rowsPerPageTemplate="#{applicationConfig.dtLinesPerPageTemplate}"
-				paginator="true" paginatorPosition="#{applicationConfig.dtPagerPosition}"					
+				paginatorPosition="#{applicationConfig.dtPagerPosition}"					
 				paginatorTemplate="#{applicationConfig.dtPagerModel}"
-					currentPageReportTemplate="#{applicationConfig.dtPagerReportModel}"					
+				currentPageReportTemplate="#{applicationConfig.dtPagerReportModel}"                
 				emptyMessage="#{messages['main.none.register']}">
 
 				<f:facet name="{Exporters}">
@@ -99,27 +97,30 @@
 				</f:facet>
 
 				<p:column headerText="Parameter Category" sortBy="#{item.admParameterCategory.description}"
-					style="width:25%" filterBy="#{item.admParameterCategory.description}"
+					style="width:20%" filterBy="#{item.admParameterCategory.description}"
 					filterMatchMode="contains">
 					<h:outputText value="#{item.admParameterCategory.description}" />
 				</p:column>
 				<p:column headerText="Parameter" sortBy="#{item.code}"
-					style="width:15%" filterBy="#{item.code}"
+					style="width:20%" filterBy="#{item.code}"
 					filterMatchMode="contains">
 					<h:outputText value="#{item.code}" />
 				</p:column>
 				<p:column headerText="Value" sortBy="#{item.value}"
-					style="width:35%" filterBy="#{item.value}"
+					style="width:25%" filterBy="#{item.value}"
 					filterMatchMode="contains">
 					<h:outputText value="#{item.value}" />
 				</p:column>
 				<p:column headerText="Description" sortBy="#{item.description}"
-					style="width:36%" filterBy="#{item.description}"
+					filterBy="#{item.description}"
 					filterMatchMode="contains">
 					<h:outputText value="#{item.description}" />
 				</p:column>
 			</p:dataTable>
 
 		</h:form>
+		<br></br>
+		<br></br>
+		<br></br>		
 	</ui:define>
 </ui:composition>
