--- a/hefesto-jakartaee/src/main/webapp/private/admin/admParameterCategory/editAdmParameterCategory.xhtml
+++ b/hefesto-jakartaee/src/main/webapp/private/admin/admParameterCategory/editAdmParameterCategory.xhtml
@@ -19,7 +19,7 @@
 						<p:commandButton id="btnSave" value="Save" ajax="false"
 							icon="pi pi-check" styleClass="ui-button-success p-mr-2 p-mb-2"
 							action="#{admParameterCategoryMB.save()}"
-							title="Save a admParameterCategory" />
+							title="Save a parameter category" />
 						
 						<p:commandButton value="Clean" id="btnClean"
 							icon="pi pi-star-o" styleClass="ui-button-primary p-mr-2"
