--- a/hefesto-jakartaee/src/main/webapp/private/admin/admParameterCategory/listAdmParameterCategory.xhtml
+++ b/hefesto-jakartaee/src/main/webapp/private/admin/admParameterCategory/listAdmParameterCategory.xhtml
@@ -43,17 +43,17 @@
 					<p:commandButton id="btnInsert" value="Insert"
 					 	icon="pi pi-plus" styleClass="ui-button-success p-mr-2"						
 						action="#{admParameterCategoryMB.onInsert()}"
-						title="Insert a new admParameterCategory" />
+						title="Insert a new parameter category" />
 
 					<p:commandButton id="btnEdit" value="Edit" ajax="false"
 						icon="pi pi-pencil" styleClass="ui-button-warning p-mr-2"
 						action="#{admParameterCategoryMB.onEdit(admParameterCategoryMB.bean)}"
-						title="Edit item de menu" />
+						title="Edit parameter category" />
 
 					<p:commandButton id="btnDelete" value="Delete"
 						icon="pi pi-trash" styleClass="ui-button-danger p-mr-2"
 						action="#{admParameterCategoryMB.prepareToDelete(admParameterCategoryMB.bean)}"
-						title="Delete admParameterCategory" update="@form" />
+						title="Delete parameter category" update="@form" />
 				
 					<p:commandButton value="Return" immediate="true" ajax="false"
 						icon="pi pi-times" styleClass="ui-button-secondary" 
