--- a/hefesto-jakartaee/src/main/webapp/private/admin/admUser/editAdmUser.xhtml
+++ b/hefesto-jakartaee/src/main/webapp/private/admin/admUser/editAdmUser.xhtml
@@ -16,20 +16,19 @@
 	
 				<div class="ui-g">
 				    <div class="ui-g-12 ui-md-12 ui-lg-12" style="text-align: right;">
-						<p:commandButton value="Save" ajax="false" icon="pi pi-check-circle"
-							action="#{admUserMB.save()}" id="btnSave"
-							styleClass="btn btn-success disableSubmit"
-							title="Save admUser" />
-
-						<p:commandButton value="Clean" icon="pi pi-star" id="btnClean"
-							styleClass="btn btn-primary disableSubmit" type="reset"
-							title="Clear Fields" />
-
+						<p:commandButton id="btnSave" value="Save" ajax="false"
+							icon="pi pi-check" styleClass="ui-button-success p-mr-2 p-mb-2"
+							action="#{admUserMB.save()}"
+							title="Save a user" />
+						
+						<p:commandButton value="Clean" id="btnClean"
+							icon="pi pi-star-o" styleClass="ui-button-primary p-mr-2"
+							type="reset" title="Clean Fields" />							
+					
 						<p:commandButton value="Cancel" immediate="true" ajax="false" 
-						    icon="pi pi-arrow-circle-left"
-							action="#{admUserMB.cancelEdition()}" id="btnCancel"
-							styleClass="btn  btn-primary disableSubmit"
-							title="Cancel" />
+							icon="pi pi-times" styleClass="ui-button-secondary" 						 
+							action="#{admUserMB.cancelEdition()}" 
+							id="btnCancel" title="Cancel" />    
 					</div>
 				</div>	
 
